force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__ApexPermissions1__c.field-meta.xml
<CustomField>
    <fullName>bofc__ApexPermissions1__c</fullName>
    <label>ApexPermissions1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>