force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__ApexPermissions2__c.field-meta.xml
<CustomField>
    <fullName>bofc__ApexPermissions2__c</fullName>
    <label>ApexPermissions2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>