force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__CustomMetadataTypeAccess__c.field-meta.xml
<CustomField>
    <fullName>bofc__CustomMetadataTypeAccess__c</fullName>
    <label>CustomMetadataTypeAccess</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>