force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__CustomPer__c.field-meta.xml
<CustomField>
    <fullName>bofc__CustomPer__c</fullName>
    <label>CustomPer</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>