force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__CustomSettAccess__c.field-meta.xml
<CustomField>
    <fullName>bofc__CustomSettAccess__c</fullName>
    <label>CustomSettAccess</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>