force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__FlowAccess__c.field-meta.xml
<CustomField>
    <fullName>bofc__FlowAccess__c</fullName>
    <label>FlowAccess</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>