force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__Is_Custom__c.field-meta.xml
<CustomField>
    <fullName>bofc__Is_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom</label>
    <type>Checkbox</type>
</CustomField>