force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__LayoutAssignment__c.field-meta.xml
<CustomField>
    <fullName>bofc__LayoutAssignment__c</fullName>
    <label>LayoutAssignment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>