force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__Login_IP_Ranges__c.field-meta.xml
<CustomField>
    <fullName>bofc__Login_IP_Ranges__c</fullName>
    <label>Login IP Ranges</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>