force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__loginhour__c.field-meta.xml
<CustomField>
    <fullName>bofc__loginhour__c</fullName>
    <label>loginhour</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>