force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Organisation_Name__c</fullName>
    <label>Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>