force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__RecordTypeSettings__c.field-meta.xml
<CustomField>
    <fullName>bofc__RecordTypeSettings__c</fullName>
    <label>RecordTypeSettings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>