force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__Unmanaged__c.field-meta.xml
<CustomField>
    <fullName>bofc__Unmanaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unmanaged</label>
    <type>Checkbox</type>
</CustomField>