force-app/main/default/objects/bofc__BOFCProfileExtract__c/fields/bofc__VisualPermissions__c.field-meta.xml
<CustomField>
    <fullName>bofc__VisualPermissions__c</fullName>
    <label>VisualPermissions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>